# datasette-ip-rate-limit

./: README.md  pyproject.toml
datasette_ip_rate_limit/: __init__.py
tests/: test_ip_rate_limit.py
