[project]
name = "datasette-ip-rate-limit"
version = "0.1"
description = "Rate limit Datasette requests by IP"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = "Apache-2.0"
classifiers=[
    "Framework :: Datasette"
]
requires-python = ">=3.10"
dependencies = [
    "datasette"
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project.urls]
Homepage = "https://github.com/datasette/datasette-ip-rate-limit"
Changelog = "https://github.com/datasette/datasette-ip-rate-limit/releases"
Issues = "https://github.com/datasette/datasette-ip-rate-limit/issues"
CI = "https://github.com/datasette/datasette-ip-rate-limit/actions"

[project.entry-points.datasette]
ip_rate_limit = "datasette_ip_rate_limit"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

